ChangeLog for herdstat

2005-03-14 Aaron Walker <ka0ttic@gentoo.org>

	* src/options.cc, src/options.hh: Added generic container for holding
	options (option_type_T). options_T now holds an internal static map of
	strings (option names) and their corresponding data in whatever type
	it is.
	* src/exceptions.hh: Added base herdstat class for bad_casts and added
	bad_option_cast_E and invalid_option_E exceptions.
	* src/action_dev_handler.cc, src/action_herd_handler.cc,
	src/action_pkg_handler.cc, src/herds.cc, src/devs.hh, src/herdstat.cc:
	Updated to use new options interface.

2005-03-13 Aaron Walker <ka0ttic@gentoo.org>

	* doc/herdstat.1.in, bashcomp: Updated for --fetch.

2005-03-11 Aaron Walker <ka0ttic@gentoo.org>

	* src/util.cc, src/util.hh: Don't use wget -q if --verbose.
	* src/herdstat.cc: Set the common format attrs here. Also added new
	option --fetch.
	* src/options.cc, src/options.hh: Added option fetch.
	* src/formatter.cc: Added quiet to format_attrs_T. Updated both
	append() functions to use it. In flush(), use remove_copy() and an
	ostream_iterator instead of a loop.
	* src/herds.cc, src/action_herd_handler.cc, src/action_dev_handler.cc,
	src/action_pkg_handler.cc: Removed a lot of the options_T::quiet()
	checks since formatter_T now handles *most* of it.

2005-03-10 Aaron Walker <ka0ttic@gentoo.org>

	* Makefile.am: Added TODO target for automatically generating the TODO
	file with devtodo.
	* src/herds_xml_handler.cc: append '@gentoo.org' to email addresses
	that lack it.
	* src/util.cc: Make current_user() return the whole email address.
	* src/herds.cc, src/herds.hh: Added herd_T::keys(); cleaned up
	herd_T::display() a little.
	* src/xmlparser.hh: Added a few comments.

2005-03-09 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (release-0.3).
	* bashcomp: Fixed the two errant ')' causing 'all' completion to
	complete to 'all\)'.  Also, moving out of distribution and into the
	portage tree for easier access.