@@ -1,12 +1,9 @@
-<!-- Automagically generated by the ToDo program on 03/13/05, 08:28 -->
+<!-- Automagically generated by the ToDo program on 03/14/05, 11:09 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
     <note priority="veryhigh" time="1110445215">
         Modify formatter_T::append() to support word highlighting.
-    </note>
-    <note priority="low" time="1109945378">
-        Figure out a way to trip excess whitespace inside elements.
     </note>
 </todo>
